--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        build-type: [debug, release]
+        build-type: [release]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -51,7 +51,7 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        build-type: [debug, release]
+        build-type: [release]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
